# python-project-83

./: .env  .env.example  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  start.sh
.github/workflows/: pyci.yml
hexlet_code.egg-info/: PKG-INFO  requires.txt
page_analyzer/: __init__.py  app.py  database.py  parser.py  url.py
page_analyzer/templates/: base.html  index.html  url_detail.html  urls.html
page_analyzer/templates/urls/: list.html  show.html
