[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [  
    "flask",  
    "gunicorn",  
    "python-dotenv",  
]

[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"